# azure-openai-batch

./: .gitignore  README.md
data/: .env  main.py  pyproject.toml
data/files/: data.jsonl
iac/: development.tfvars  locals.tf  main.tf  provider.tf  variables.tf
src/: .env  main.py  pyproject.toml  results.jsonl  results.py
